# veeox

./: .clippy.toml  .codecov.yml  .gitignore  .prettierrc.yml  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  deny.toml  rustfmt.toml  spellcheck.dic  spellcheck.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  _base.yml  ci.yml  fuzz.yml  labeler.yml  labels.yml  miri.yml  sanitizer.yml
benches/: Cargo.toml  demo.rs  web.rs
bloats/: Cargo.toml  demo.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: lib.rs
crates/string/: Cargo.toml
crates/string/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: README.md  token
examples/: Cargo.toml  demo.rs  web.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: web.rs
profiles/: bloat.info  lcov.info
scripts/: _arc.sh  base.sh  cargo.sh  doc.sh  git.sh  init.sh  install.sh  run.sh  token
scripts/core/: bash.sh  env.sh  fs.sh  index.sh  parse.sh  pkg.sh  tool.sh
scripts/initial/: boot.sh  installer.sh  loader.sh
scripts/module/: cargo.sh  doctor.sh  git.sh  github.sh  rust.sh
scripts/module/cargo/: arch.sh  base.sh  cargo.sh  ci.sh  crate.sh  deps.sh  doctor.sh  lint.sh  meta.sh  perf.sh  safety.sh
scripts/module/git/: arch.sh  github.sh
scripts/module/observe/: notify.sh
scripts_old/: cargo.sh
supply-chain/: audits.toml  config.toml
tests/: Cargo.toml  demo.rs
tests/tests/: web.rs
