[workspace]
resolver = "2"
members = ["tests", "benches", "examples", "fuzz", "crates/api", "crates/string", "crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "veeox: modern Rust ecosystem for high-performance backends."
repository = "https://github.com/codingmstr/veeox"
homepage = "https://github.com/codingmstr/veeox"
authors = ["Coding Master <codingmaster009@gmail.com>"]
keywords = ["veeox", "api", "backend"]

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.dependencies]
veeox = { path = "crates/web", version = "0.1.0" }
veeox-api = { path = "crates/api", version = "0.1.0" }
veeox-string = { path = "crates/string", version = "0.1.0" }

criterion = "0.5.1"

# lints
[workspace.lints.rust]
warnings = "deny"
future_incompatible = "deny"
rust_2018_idioms = "deny"
nonstandard_style = "deny"
unused = "deny"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

disallowed_methods = "deny"
disallowed_names = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"

multiple_crate_versions = "allow"
