[workspace]
resolver = "2"
members = ["tests", "benches", "examples", "fuzz", "crates/api", "crates/string", "crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "veeox: modern Rust ecosystem for high-performance backends."
repository = "https://github.com/codingmstr/veeox"
homepage = "https://github.com/codingmstr/veeox"
authors = ["Coding Master <codingmaster009@gmail.com>"]
keywords = ["veeox", "api", "backend"]

[workspace.dependencies]
criterion = "0.5.1"
veeox = { path = "crates/web", version = "0.1.0" }
veeox-api = { path = "crates/api", version = "0.1.0" }
veeox-string = { path = "crates/string", version = "0.1.0" }

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "allow"
warnings = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
disallowed_names = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
todo = "deny"
exit = "deny"
panic = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
multiple_crate_versions = "allow"
