[package]
name = "benches"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false
description = "workspace benches"

[dependencies]
veeox = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "web"
path = "web.rs"
harness = false
