[package]
name = "examples"
description = "workspace examples"
publish = false
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
demo = { workspace = true }

[[example]]
name = "demo"
path = "demo.rs"
