[package]
name = "fuzz"
description = "workspace fuzz"
publish = false
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
veeox = { workspace = true }

[[bin]]
name = "web"
path = "fuzz_targets/web.rs"
test = false
doc = false
bench = false
