[package]
name = "fuzz"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false
description = "workspace fuzz"

[package.metadata]
cargo-fuzz = true

[dependencies]
demo = { workspace = true }
libfuzzer-sys = "0.4"

[[bin]]
name = "demo"
path = "fuzz_targets/demo.rs"
test = false
doc = false
bench = false
