[package]
name = "tests"
description = "workspace tests"
publish = false
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
veeox = { workspace = true }
