[package]
name = "tests"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false
description = "workspace tests"

[dependencies]
veeox = { workspace = true }
