[package]
name = "demo"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "demo: this is a demo crate"
categories = ["development-tools"]
keywords = ["demo"]

[dependencies]

[lints]
workspace = true
