[package]
name = "veeox"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "veeox: main web facade for the veeox ecosystem."
categories = ["web-programming::http-server", "web-programming::frameworks"]
keywords = ["veeox", "web", "framework", "backend", "async", "veeox-tools"]

[dependencies]
veeox-api = { workspace = true }
veeox-string = { workspace = true }
